Update index.html lan 2

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <h1>BC55</h1>
     <h2>demo git clone</h2>
+    <h3>Demo git pull</h3>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
